--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -90,6 +90,15 @@ section.jumbotron {
   }
 }
 
+.img-responsive {
+  max-width: 100%;
+  height: auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
 /**
  *  Do not remove the comment below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
