--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -15,7 +15,6 @@
   </form>
   <footer class="form-footer">
     <md-button ng-click="main.prevStep()" class="md-raised md-primary">Back</md-button>
-    <md-button ng-click="main.nextStep()" class="md-raised md-primary">Next</md-button>
-    <!-- <md-button ng-disabled="mainForm[main.currentStepObj.form].$invalid" ng-click="main.nextStep()" class="md-raised md-primary">Next</md-button> -->
+    <md-button ng-disabled="mainForm[main.currentStepObj.form].$invalid" ng-click="main.nextStep()" class="md-raised md-primary">Next</md-button>
   </footer>
 </div>
