--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -1,3 +1,4 @@
+// Layout
 .form-container {
   margin: 0 auto;
   padding: 15px;
@@ -16,6 +17,8 @@
   border-top: 0;
 }
 
+
+// Steps
 .stepper {
   width: 100%;
   display: block;
