--- a/src/app/series/series.html
+++ b/src/app/series/series.html
@@ -3,9 +3,9 @@
   <br>
 
   <div layout="row" layout-wrap>
-    <div flex="25" hide-xs>
-      <img class="img-responsive" ng-if="main.serie.Poster && main.serie.Poster !== 'N/A'" src="{{ main.serie.Poster }}" alt="">
-      <img class="img-responsive" ng-if="!main.serie.Poster || main.serie.Poster === 'N/A'" src="http://marvelmoviemarathon.com/posters/placeholder.png" alt="">
+    <div flex="25">
+      <img class="img-responsive" ng-if="main.serie.Poster && main.serie.Poster !== 'N/A'" ng-show="main.serie.Poster" ng-src="{{ main.serie.Poster }}" alt="{{ main.serie.Title }}">
+      <img class="img-responsive" ng-if="!main.serie.Poster || main.serie.Poster === 'N/A'" ng-src="http://marvelmoviemarathon.com/posters/placeholder.png" alt="{{ main.serie.Title }}">
     </div>
     <div flex="5" hide-xs></div>
     <div flex>
