--- a/app/components/movies/movies.html
+++ b/app/components/movies/movies.html
@@ -1,15 +1,19 @@
 <ng-form name="moviesForm">
   <h1>{{ main.currentStepObj.title }}</h1>
-  <p>Which of these is your favorite Star Wars movie?</p>
-  <br>
-
-  <md-radio-group ng-model="main.moviesForm.movie" ng-change="main.selectMovie()" required layout="row" layout-wrap>
-    <div class="radio-vertical" ng-repeat="movie in main.movies" flex-gt-sm="25" flex="50">
-      <md-radio-button ng-value="$index" aria-label="{{ movie.Title }}">
-        <img ng-if="movie.Poster && movie.Poster !== 'N/A'" height="100" ng-show="movie.Poster" ng-src="{{ movie.Poster }}" alt="{{ movie.Title }}">
-        <img ng-if="!movie.Poster || movie.Poster === 'N/A'" height="100" ng-src="http://marvelmoviemarathon.com/posters/placeholder.png" alt="{{ movie.Title }}">
-      </md-radio-button>
-      <p>{{ movie.Title }}</p>
-    </div>
-  </md-radio-group>
+  <div ng-if="main.status.movies.fetched">
+    <p>Which of these is your favorite Star Wars movie?</p>
+    <br>
+    <md-radio-group ng-model="main.moviesForm.movie" ng-change="main.selectMovie()" required layout="row" layout-wrap>
+      <div class="radio-vertical" ng-repeat="movie in main.movies" flex-gt-sm="25" flex="50">
+        <md-radio-button ng-value="$index" aria-label="{{ movie.Title }}">
+          <img ng-if="movie.Poster && movie.Poster !== 'N/A'" height="100" ng-show="movie.Poster" ng-src="{{ movie.Poster }}" alt="{{ movie.Title }}">
+          <img ng-if="!movie.Poster || movie.Poster === 'N/A'" height="100" ng-src="http://marvelmoviemarathon.com/posters/placeholder.png" alt="{{ movie.Title }}">
+        </md-radio-button>
+        <p>{{ movie.Title }}</p>
+      </div>
+    </md-radio-group>
+  </div>
+  <div ng-if="main.status.movies.error">
+    <p>Error fetching data. Please, try again later.</p>
+  </div>
 </ng-form>
