--- a/app/index.scss
+++ b/app/index.scss
@@ -44,8 +44,14 @@
   font-feature-settings: 'liga';
 }
 
-html {
+html, body {
+  background: #f7f7f7;
   font-family: 'Roboto', sans-serif;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 [layout=row] {
@@ -97,6 +103,11 @@ section.jumbotron {
 
 .text-center {
   text-align: center;
+}
+
+.main-view {
+  position: relative;
+  z-index: 1;
 }
 
 /**
