--- a/app/assets/css/components/main/main.css
+++ b/app/assets/css/components/main/main.css
@@ -1,12 +1,18 @@
-.form-container {
+.container {
+  max-width: 980px;
   margin: 0 auto;
-  padding: 15px;
-  max-width: 980px; }
+  padding: 0 15px; }
+
+.form-container {
+  background: #fff;
+  margin-bottom: 50px; }
+
+.form-body, .form-footer {
+  border: solid 1px #eee;
+  padding: 3.6% 6%; }
 
 .form-header, .form-body, .form-footer {
-  background: #fafafa;
-  border: solid 1px #eee;
-  padding: 4% 6%; }
+  border: solid 1px #eee; }
 
 .form-header {
   border-bottom: 0; }
@@ -16,12 +22,13 @@
 
 .stepper {
   width: 100%;
-  display: block; }
+  display: block;
+  position: relative; }
   .stepper ul {
     display: flex;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 5%;
     justify-content: space-between;
     position: relative;
     z-index: 10; }
@@ -32,25 +39,40 @@
       height: 1px;
       position: absolute;
       z-index: -1;
-      background: #ccc;
+      background: #eee;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
       margin: auto; }
     .stepper ul li button {
-      display: block;
-      width: 30px;
-      height: 30px;
-      line-height: 25px;
-      text-align: center;
-      border-radius: 50%;
-      color: #000;
-      border: solid 1px #000;
-      outline: none;
       background: #fff;
-      font-size: 12px;
-      text-decoration: none; }
-      .stepper ul li button.active {
-        background: #000;
-        color: #fff; }
+      padding: 33% 10px;
+      border: none;
+      outline: none;
+      display: flex;
+      align-items: center;
+      font-size: 14px; }
+      .stepper ul li button > .step-icon {
+        display: block;
+        width: 30px;
+        height: 30px;
+        line-height: 28px;
+        text-align: center;
+        border-radius: 50%;
+        color: #fff;
+        background: #bbb;
+        text-decoration: none;
+        margin-right: 10px; }
+        .stepper ul li button > .step-icon .material-icons {
+          color: #fff;
+          font-size: 18px; }
+      .stepper ul li button > .step-title {
+        color: #bbb; }
+        @media (max-width: 767px) {
+          .stepper ul li button > .step-title {
+            display: none; } }
+      .stepper ul li button.active > .step-icon, .stepper ul li button.dirty > .step-icon {
+        background: #3F51B5; }
+      .stepper ul li button.active > .step-title {
+        color: #000; }
